# monalisa_py

./: .gitignore  4_api.html  Dockerfile  README.md  __init__.py  requirements.txt
porting/: README.md  __init__.py  pyproject.toml
porting/agentic/: __init__.py  config.py
porting/config/: doc_function_catalog.json  doc_native_map_candidates.json  instruction_kb_matlab_project.json  instruction_kb_python_project.json  native_function_map.json  parity_cases.template.json  parity_config.yaml
porting/docs/: AGENT_TOOLING_MAP.md  EXAMPLE_ORIGINAL_TO_PORTED.md  IDE_AGENT_GUIDE.md  LANGGRAPH_V2_ARCHITECTURE.md  TODO_TRANSLATION_EXAMPLES.md
porting/lib/: __init__.py  matlab_source_quality.py  utils.py
porting/prompts/: matlab_to_python_examples.md  system_agentic_orchestrator_compact.md  system_agentic_orchestrator_full.md  system_doc.md  system_ide_agent.md  system_porter.md  system_reviewer.md  system_tester.md
porting/reports/: agent_repair_cycle_report.json  contract_test_generation_report.json  dependency_graph.json  differences_old_new_logic.json  extracted_logic_trial.json  generated_files_analysis.json  logic_differences.json  logic_differences_fixed.json  pipeline_run_report.json  porting_order.json
porting/scripts/: __init__.py  analyze_generated_files.py  audit_agentic_logs.py  auto_fix_missing_imports.py  bootstrap_porting_task.py  build_agent_context.py  build_project_instruction_kb.py  clean_project.py  clean_src_python.py  cleanup_pipeline_artifacts.py  compare_matlab_python_logic.py  compare_old_new_logic.py  compare_parity_snapshots.py  (+25 more)
(+1625 files in other folders)
